--- a/data_vizualisation/laba_2/laba2.ipynb
+++ b/data_vizualisation/laba_2/laba2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "outputs": [
     {
      "data": {
-      "text/plain": "               name landmass zone  area  population             language  \\\n0       Afghanistan     Asia   NE   648          16               Others   \n1           Albania   Europe   NE    29           3  Other Indo-European   \n2           Algeria   Africa   NE  2388          20               Arabic   \n3    American-Samoa  Oceania   SW     0           0              English   \n4           Andorra   Europe   NE     0           0  Other Indo-European   \n..              ...      ...  ...   ...         ...                  ...   \n189   Western-Samoa  Oceania   SW     3           0              English   \n190      Yugoslavia   Europe   NE   256          22  Other Indo-European   \n191           Zaire   Africa   SE   905          28               Others   \n192          Zambia   Africa   SE   753           6               Others   \n193        Zimbabwe   Africa   SE   391           8               Others   \n\n            religion  \n0             Muslim  \n1            Marxist  \n2             Muslim  \n3    Other Christian  \n4           Catholic  \n..               ...  \n189  Other Christian  \n190          Marxist  \n191           Ethnic  \n192           Ethnic  \n193           Ethnic  \n\n[194 rows x 7 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>landmass</th>\n      <th>zone</th>\n      <th>area</th>\n      <th>population</th>\n      <th>language</th>\n      <th>religion</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Afghanistan</td>\n      <td>Asia</td>\n      <td>NE</td>\n      <td>648</td>\n      <td>16</td>\n      <td>Others</td>\n      <td>Muslim</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Albania</td>\n      <td>Europe</td>\n      <td>NE</td>\n      <td>29</td>\n      <td>3</td>\n      <td>Other Indo-European</td>\n      <td>Marxist</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Algeria</td>\n      <td>Africa</td>\n      <td>NE</td>\n      <td>2388</td>\n      <td>20</td>\n      <td>Arabic</td>\n      <td>Muslim</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>American-Samoa</td>\n      <td>Oceania</td>\n      <td>SW</td>\n      <td>0</td>\n      <td>0</td>\n      <td>English</td>\n      <td>Other Christian</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Andorra</td>\n      <td>Europe</td>\n      <td>NE</td>\n      <td>0</td>\n      <td>0</td>\n      <td>Other Indo-European</td>\n      <td>Catholic</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>189</th>\n      <td>Western-Samoa</td>\n      <td>Oceania</td>\n      <td>SW</td>\n      <td>3</td>\n      <td>0</td>\n      <td>English</td>\n      <td>Other Christian</td>\n    </tr>\n    <tr>\n      <th>190</th>\n      <td>Yugoslavia</td>\n      <td>Europe</td>\n      <td>NE</td>\n      <td>256</td>\n      <td>22</td>\n      <td>Other Indo-European</td>\n      <td>Marxist</td>\n    </tr>\n    <tr>\n      <th>191</th>\n      <td>Zaire</td>\n      <td>Africa</td>\n      <td>SE</td>\n      <td>905</td>\n      <td>28</td>\n      <td>Others</td>\n      <td>Ethnic</td>\n    </tr>\n    <tr>\n      <th>192</th>\n      <td>Zambia</td>\n      <td>Africa</td>\n      <td>SE</td>\n      <td>753</td>\n      <td>6</td>\n      <td>Others</td>\n      <td>Ethnic</td>\n    </tr>\n    <tr>\n      <th>193</th>\n      <td>Zimbabwe</td>\n      <td>Africa</td>\n      <td>SE</td>\n      <td>391</td>\n      <td>8</td>\n      <td>Others</td>\n      <td>Ethnic</td>\n    </tr>\n  </tbody>\n</table>\n<p>194 rows × 7 columns</p>\n</div>"
+      "text/plain": "             name landmass zone  area  population             language  \\\n0     Afghanistan     Asia   NE   648          16               Others   \n1         Albania   Europe   NE    29           3  Other Indo-European   \n2         Algeria   Africa   NE  2388          20               Arabic   \n3  American-Samoa  Oceania   SW     0           0              English   \n4         Andorra   Europe   NE     0           0  Other Indo-European   \n\n          religion  \n0           Muslim  \n1          Marxist  \n2           Muslim  \n3  Other Christian  \n4         Catholic  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>landmass</th>\n      <th>zone</th>\n      <th>area</th>\n      <th>population</th>\n      <th>language</th>\n      <th>religion</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Afghanistan</td>\n      <td>Asia</td>\n      <td>NE</td>\n      <td>648</td>\n      <td>16</td>\n      <td>Others</td>\n      <td>Muslim</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Albania</td>\n      <td>Europe</td>\n      <td>NE</td>\n      <td>29</td>\n      <td>3</td>\n      <td>Other Indo-European</td>\n      <td>Marxist</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Algeria</td>\n      <td>Africa</td>\n      <td>NE</td>\n      <td>2388</td>\n      <td>20</td>\n      <td>Arabic</td>\n      <td>Muslim</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>American-Samoa</td>\n      <td>Oceania</td>\n      <td>SW</td>\n      <td>0</td>\n      <td>0</td>\n      <td>English</td>\n      <td>Other Christian</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Andorra</td>\n      <td>Europe</td>\n      <td>NE</td>\n      <td>0</td>\n      <td>0</td>\n      <td>Other Indo-European</td>\n      <td>Catholic</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 51,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,11 +45,18 @@
     "    6: 'Other Indo-European',\n",
     "    7: 'Chinese',\n",
     "    8: 'Arabic',\n",
-    "    9: 'Japanese/Turkish/Finnish/Magyar', 10: 'Others'\n",
+    "    9: 'Japanese/Turkish/Finnish/Magyar',\n",
+    "    10: 'Others'\n",
     "}\n",
     "religions = {\n",
-    "    0: 'Catholic', 1: 'Other Christian', 2: 'Muslim', 3: 'Buddhist', 4: 'Hindu',\n",
-    "               5: 'Ethnic', 6: 'Marxist', 7: 'Others'\n",
+    "    0: 'Catholic',\n",
+    "    1: 'Other Christian',\n",
+    "    2: 'Muslim',\n",
+    "    3: 'Buddhist',\n",
+    "    4: 'Hindu',\n",
+    "    5: 'Ethnic',\n",
+    "    6: 'Marxist',\n",
+    "    7: 'Others'\n",
     "}\n",
     "\n",
     "flags = flags.replace({\n",
@@ -59,7 +66,7 @@
     "    'religion': religions\n",
     "})\n",
     "flags = flags.loc[:, :'religion']\n",
-    "flags"
+    "flags.head()"
    ],
    "metadata": {
     "collapsed": false
@@ -160,7 +167,7 @@
     }
    ],
    "source": [
-    "sns.lmplot(flags,x = 'area', y = 'population')\n",
+    "sns.lmplot(flags, x='area', y='population')\n",
     "plt.show()"
    ],
    "metadata": {
@@ -188,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "outputs": [
     {
      "data": {
@@ -264,7 +271,7 @@
     }
    ],
    "source": [
-    "pd.plotting.andrews_curves(orchard_sprays, 'treatment') # todo почитать что этот график значит\n",
+    "pd.plotting.andrews_curves(orchard_sprays, 'treatment')  # todo почитать что этот график значит\n",
     "plt.show()"
    ],
    "metadata": {
